# django-api-polls-tutorial

./: README.md  pyproject.toml
.circleci/: config.yml
polls/: admin.py  apiviews.py  serializers.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
pollsapi/: settings.py  urls.py
