[tool.poetry]
name = "django-api-polls-tutorial"
version = "0.1.0"
description = ""
authors = ["Rishat Sharafiev <rishatsharafiev@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
djangorestframework = "^3.11.0"
drf-yasg = "^1.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
